# task_manager

./: .gitignore  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
tasks/: admin.py  models.py  urls.py
tasks/management/commands/: seed_tasks.py  seed_users.py
tasks/migrations/: 0001_initial.py  0002_auto_20250604_1547.py
templates/_layout/: base.html
templates/_partials/: footer.html  header.html
templates/tasks/: about.html  help.html  index.html
