[project]
name = "task_manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Salim Kachemela", email = "sakachemela@gmail.com" }]
dependencies = ["django>=5.2.1", "psycopg>=3.2.9"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
app = "./manage.py startapp"
csu = "./manage.py createsuperuser"
start = "./manage.py runserver"
shell = "./manage.py shell"
mm = "./manage.py makemigrations"
mg = "./manage.py migrate"

[tool.djlint]
profile = "django"
indent = 2
ignore = "H006,H030,H031"
include = "H017,H035"
blank_line_after_tag = "load,extends,endblock,include"
max_line_length = 120
format_attrite_template_tags = true

[tool.ruff]
line-length = 100

[tool.pylsp]
configurationSources = ["pycodestyle"]

[tool.pylsp.plugins.pycodestyle]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "django-extensions>=4.1",
    "Faker>=37.3.0",
]
